app/ui/range.module.css
.rangeContainer {
  display: flex;
  align-items: center;
}

.minValue {
  margin-right: 20px;
  font-size: 30px;
}

.minBullet {
  background-color: black;
  border-radius: 10px;
  height: 20px;
  position: absolute;
  width: 20px;
  top: -5px;
  transform: translateX(-50%);
}

.minBullet:hover {
  height: 30px;
  width: 30px;
  border-radius: 15px;
  top: -10px;
  cursor: grab;
}

.minBullet.grabbing {
  cursor: grabbing;
}

.rangeLine {
  background-color: black;
  border-radius: 5px;
  height: 10px;
  position: relative;
  width: 500px;
}

.maxValue {
  margin-left: 20px;
  font-size: 30px;
}

